# hyprland-mcp

./: README.md  install.sh  pyproject.toml
hyprland_mcp/: __init__.py  clipboard.py  errors.py  hyprctl.py  input.py  ocr.py  screenshot.py  server.py
